--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 
 # Specific to this application
 logs/.*
+simple-blockchain-quickstart
+/logs/app.log
+/go.sum
+/.idea/modules.xml
+/.idea/simple-blockchain-quickstart.iml
+/.idea/vcs.xml
