--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,11 @@ jobs:
       - run:
           name: Install dependencies & Launch tests
           command: |
-            cd "/home/circleci/.go_workspace/src/github.com/v4lproik/simple-blockchain-quickstart"
-            sudo chown -R $(id -u):$(id -g) /home/circleci/.go_workspace
-            make dep
-            make test
+            cd "$CIRCLE_WORKING_DIRECTORY"
+            sudo chown -R $(id -u):$(id -g) $CIRCLE_WORKING_DIRECTORY
+            echo $CIRCLE_WORKING_DIRECTORY
+            ls -al
+            go mod download
 
       - save_cache:
           key: go-mod-cache-v2-{{ arch }}-{{ .Branch }}-{{ checksum "go.mod" }}
