Improve deployment script with global variable shared across builder and deployer

--- a/config/local.env
+++ b/config/local.env
@@ -1,5 +1,5 @@
-export transactions_file_path./databases/blocks.db"
-export genesis_file_path="./databases/genesis.db"
+export transactions_file_path="./databases/blocks.db"
+export genesis_file_path="./databases/genesis.json"
 export keystore_dir_path="./databases/keystore/"
 export nodes_file_path="./databases/network_nodes.toml"
 export users_file_path="./databases/users.toml"
