WIP: refacto state service Ready: Sync database

--- a/config/local.env
+++ b/config/local.env
@@ -1,11 +1,11 @@
-export transactions_file_path="./databases/blocks.db"
-export genesis_file_path="./databases/genesis.json"
-export keystore_dir_path="./databases/keystore/"
-export nodes_file_path="./databases/network_nodes.toml"
-export users_file_path="./databases/users.toml"
+export transactions_file_path="./testdata_2/blocks.db"
+export genesis_file_path="./testdata_2/genesis.json"
+export keystore_dir_path="./testdata_2/keystore/"
+export nodes_file_path="./testdata_2/network_nodes.toml"
+export users_file_path="./testdata_2/users.toml"
 export SBQ_ENV="local"
 export SBQ_SERVER_ADDRESS="localhost"
-export SBQ_SERVER_PORT="8080"
+export SBQ_SERVER_PORT="8081"
 export SBQ_SERVER_IS_SSL="false"
 export SBQ_SERVER_CERT_FILE=""
 export SBQ_SERVER_KEY_FILE=""
@@ -15,7 +15,7 @@ export SBQ_SERVER_HTTP_CORS_ALLOWED_HEADERS=""
 export SBQ_IS_AUTHENTICATION_ACTIVATED="true"
 export SBQ_IS_JKMS_ACTIVATED="true"
 export SBQ_DOMAINS_TO_START="AUTH,BALANCES,HEALTHZ,NODES,TRANSACTIONS,WALLETS"
-export SBQ_JWT_KEY_PATH="./databases/private.pem"
+export SBQ_JWT_KEY_PATH="./testdata_2/private.pem"
 export SBQ_JWT_KEY_ID="sbq-auth-key-id"
 export SBQ_JWT_EXPIRES_IN_HOURS="24"
 export SBQ_JWT_DOMAIN="localhost"
