Parallelise node synchronisation

--- a/testdata/node2/network_nodes.toml
+++ b/testdata/node2/network_nodes.toml
@@ -9,3 +9,9 @@ address = "localhost"
 port=8082
 is_bootstrap=true
 is_active=true
+
+[Nodes.Omega]
+address = "localhost"
+port=8088
+is_bootstrap=true
+is_active=true
