Expose sync interval variable from config variable

--- a/config/local.env
+++ b/config/local.env
@@ -26,3 +26,5 @@ export SBQ_JWT_JKMS_URL="http://localhost:8080/api/auth/.well-known/jwks.json"
 export SBQ_JWT_JKMS_REFRESH_CACHE_INTERVAL_IN_MIN="1"
 export SBQ_JWT_JKMS_REFRESH_CACHE_RATE_LIMIT_IN_MIN="1000"
 export SBQ_JWT_JKMS_REFRESH_CACHE_TIMEOUT_IN_SEC="1"
+export SBQ_CONSENSUS_COMPLEXITY="3"
+export SBQ_SYNCHRONISATION_INTERVAL_IN_SEC="20"
