WIP test mining

--- a/config/local.env
+++ b/config/local.env
@@ -28,4 +28,4 @@ export SBQ_JWT_JKMS_REFRESH_CACHE_RATE_LIMIT_IN_MIN="1000"
 export SBQ_JWT_JKMS_REFRESH_CACHE_TIMEOUT_IN_SEC="1"
 export SBQ_CONSENSUS_COMPLEXITY="3"
 export SBQ_SYNCHRONISATION_INTERVAL_IN_SEC="20"
-export SBQ_NODE_MINER_ADDRESS=""
+export SBQ_NODE_MINER_ADDRESS="0x01fc1af4a56cde68675dc44cabd486e8d3559f07"
