Add makefile take into account env variables

--- a/config/local.env
+++ b/config/local.env
@@ -1,8 +1,19 @@
-export transactions_file_path="./testdata/node1/blocks.db"
-export genesis_file_path="./testdata/node1/genesis.json"
-export keystore_dir_path="./testdata/node1/keystore/"
-export nodes_file_path="./testdata/node1/network_nodes.toml"
-export users_file_path="./testdata/node1/users.toml"
+#!/bin/sh
+#specific to node1
+export SBQ_TRANSACTIONS_FILE_PATH_NODE_1="./testdata/node1/blocks.db"
+export SBQ_GENESIS_FILE_PATH_NODE_1="./testdata/node1/genesis.json"
+export SBQ_KEYSTORE_DIR_PATH_NODE_1="./testdata/node1/keystore/"
+export SBQ_NODES_FILE_PATH_NODE_1="./testdata/node1/network_nodes.toml"
+export SBQ_USERS_FILE_PATH_NODE_1="./testdata/node1/users.toml"
+export SBQ_NODE_MINER_ADDRESS_NODE_1="0x01fc1af4a56cde68675dc44cabd486e8d3559f07"
+#specific to node2
+export SBQ_TRANSACTIONS_FILE_PATH_NODE_2="./testdata/node2/blocks.db"
+export SBQ_GENESIS_FILE_PATH_NODE_2="./testdata/node2/genesis.json"
+export SBQ_KEYSTORE_DIR_PATH_NODE_2="./testdata/node2/keystore/"
+export SBQ_NODES_FILE_PATH_NODE_2="./testdata/node2/network_nodes.toml"
+export SBQ_USERS_FILE_PATH_NODE_2="./testdata/node2/users.toml"
+export SBQ_NODE_MINER_ADDRESS_NODE_2="0x01fc1af4a56cde68675dc44cabd486e8d3559f07"
+#specific to all the node
 export SBQ_ENV="local"
 export SBQ_SERVER_ADDRESS="localhost"
 export SBQ_SERVER_PORT="8080"
@@ -28,4 +39,3 @@ export SBQ_JWT_JKMS_REFRESH_CACHE_RATE_LIMIT_IN_MIN="1000"
 export SBQ_JWT_JKMS_REFRESH_CACHE_TIMEOUT_IN_SEC="1"
 export SBQ_CONSENSUS_COMPLEXITY="3"
 export SBQ_SYNCHRONISATION_INTERVAL_IN_SEC="20"
-export SBQ_NODE_MINER_ADDRESS="0x01fc1af4a56cde68675dc44cabd486e8d3559f07"
