--- a/config/local.env
+++ b/config/local.env
@@ -39,3 +39,4 @@ export SBQ_JWT_JKMS_REFRESH_CACHE_RATE_LIMIT_IN_MIN="1000"
 export SBQ_JWT_JKMS_REFRESH_CACHE_TIMEOUT_IN_SEC="1"
 export SBQ_CONSENSUS_COMPLEXITY="3"
 export SBQ_SYNCHRONISATION_INTERVAL_IN_SEC="20"
+export SBQ_CONSENSUS_CREATE_NEW_BLOCK_INTERVAL_IN_SEC="5"
